--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
       <h2 class="text-center">Basic Membership</h2>
       <h4>Sign up for FREE and get basic access to the community.</h4>
       <br>
-      <%= link_to "Sign up with Basic", new_user_registration_path, class:'btn btn-primary btn-block btn-lg', method: :get %>
+      <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class:'btn btn-primary btn-block btn-lg', method: :get %>
 
       
     </div>
@@ -21,7 +21,7 @@
       
       <h2 class="text-center">Pro Membership</h2>
       <h4>Sign up for PRO and get access to the community and contact information.  Only $10/month!</h4>
-      <%= link_to "Sign up with Pro", new_user_registration_path, class:'btn btn-success btn-block btn-lg', method: :get %>
+      <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class:'btn btn-success btn-block btn-lg', method: :get %>
     
     </div>
   </div>
