Added bare bones user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
-<H1>UsersController says:  Hope you like your profile</H1>
-
-<%= @user %>
+<%= current_user.email %> <br/>
+<%= @user.profile.first_name %><%= @user.profile.last_name %> <br/>
+<%= @user.profile.job_title %> <br/>
+<% if current_user.plan_id == 2 %>
+    <%= @user.profile.phone_number %> <br/>
+    <%= @user.profile.contact_email %> <br/>
+<% end %>
+<%= @user.profile.description %> <br/>
