--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,30 +1,49 @@
-<%= link_to "Create your profile!",new_user_profile_path(current_user) if current_user %>
 <div class="jumbotron text-center">
   <h1>Welcome to Dev Match</h1>
   <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
-
-<div class="row">
-  <div class = "col-md-6">
-    <div class="well">
-      
-      <h2 class="text-center">Basic Membership</h2>
-      <h4>Sign up for FREE and get basic access to the community.</h4>
-      <br>
-      <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class:'btn btn-primary btn-block btn-lg', method: :get %>
-
-      
-    </div>
-  </div>
-  
-  <div class="col-md-6">
-    <div class="well">
-      
-      <h2 class="text-center">Pro Membership</h2>
-      <h4>Sign up for PRO and get access to the community and contact information.  Only $10/month!</h4>
-      <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class:'btn btn-success btn-block btn-lg', method: :get %>
+  <div class="row">
     
-    </div>
+    <% if user_signed_in? %>
+      <div class = "col-md-6">
+        <div class="well">
+          <% if current_user.profile %>
+            <h2 class="text-center">Your Profile</h2>
+            <%= link_to "Edit Your Profile", "#", class:'btn btn-default btn-block btn-lg' %>
+            <%= link_to "View Your Profile", user_path( current_user ), class:'btn btn-default btn-block btn-lg' %>
+            
+          <% else %>
+            <%= link_to "Create your profile!",new_user_profile_path(current_user), class:'btn btn-success btn-block btn-lg' %>
+          <% end %>
+        </div>
+      </div> 
+      
+      <div class = "col-md-6">
+        <div class="well">
+          <h2 class="text-center">Community</h2>
+          <p>Visit the community to meet other developers, entrepreneurs and investors!</p>
+          <%= link_to "Visit The Community", "#", class:'btn btn-default btn-block btn-lg' %>
+        </div>
+      </div>
+    
+    <% else %>
+        <div class = "col-md-6">
+          <div class="well">
+            
+            <h2 class="text-center">Basic Membership</h2>
+            <h4>Sign up for FREE and get basic access to the community.</h4>
+            <br>
+            <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class:'btn btn-primary btn-block btn-lg', method: :get %>
+          </div>
+        </div>
+        
+        <div class="col-md-6">
+          <div class="well">
+            
+            <h2 class="text-center">Pro Membership</h2>
+            <h4>Sign up for PRO and get access to the community and contact information.  Only $10/month!</h4>
+            <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class:'btn btn-success btn-block btn-lg', method: :get %>
+          </div>
+    <% end %>
+      </div>
   </div>
-  
-</div>
