fixed small items on home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,8 @@
             <%= link_to "View Your Profile", user_path( current_user ), class:'btn btn-default btn-block btn-lg' %>
             
           <% else %>
-            <%= link_to "Create your profile!",new_user_profile_path(current_user), class:'btn btn-success btn-block btn-lg' %>
+            <p>Create a profile so that you can share your information with the community</p>
+            <%= link_to "Create your profile",new_user_profile_path(current_user), class:'btn btn-default btn-block btn-lg' %>
           <% end %>
         </div>
       </div> 
