--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,8 @@
         <div class="well">
           <% if current_user.profile %>
             <h2 class="text-center">Your Profile</h2>
-            <%= link_to "Edit Your Profile", "#", class:'btn btn-default btn-block btn-lg' %>
+            <%= link_to "Edit Your Profile", edit_user_profile_path( current_user), class:'btn btn-default btn-block btn-lg' %>
+            
             <%= link_to "View Your Profile", user_path( current_user ), class:'btn btn-default btn-block btn-lg' %>
             
           <% else %>
