--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <%= current_user.email %> <br/><br/>
 <%= @user.profile.first_name %><%= @user.profile.last_name %> <br/>
+<%= image_tag @user.profile.avatar.url(:thumb) %> <br/>
 <%= @user.profile.job_title %> <br/>
 <% if current_user.plan_id == 2 %>
     <%= @user.profile.phone_number %> <br/>
