--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -7,5 +7,21 @@
     color: white;
     border-radius: 4px;
     text-align: center;
+}
 
+.well.profile-block {
+    color: #fff;
+    h3 {
+        margin-top: 0px;
+    }
+}
+
+.well.profile-description {
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
+
+.well.profile-contact-info {
+    background-color: #5bc0de;
+    border-color: #46b8da;
 }
