--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,16 +6,22 @@
   </div>
       
   <div class = "row">
-    <div class = "col-md-2">
+    <div class = "col-md-3">
       <%= image_tag @user.profile.avatar.url(:thumb) %> <br/>
     </div>
-    <div class = "col-md-10 text-top">
+    <div class = "col-md-6">
       <h1><%= @user.profile.first_name %><%= @user.profile.last_name %></h1>
       <h3><span class="job-title-icon"><%= job_title_icon %></span><%= @user.profile.job_title %></h3>
-      <h4><%= @user.profile.description %></h4>
+      <div class = "well profile-block profile-description">
+        <h3>Description</h3>
+        <h4><%= @user.profile.description %></h4>
+      </div>
       <% if current_user.plan_id == 2 %>
-        <h5><%= @user.profile.phone_number %> 
-        <h5><%= @user.profile.contact_email %></h5>
+        <div class = "well profile-block profile-contact-info">
+          <h3>Premium Service:  Contact Information</h3>
+          <h5><%= @user.profile.phone_number %> 
+          <h5><%= @user.profile.contact_email %></h5>
+        </div>
       <% end %>
     </div>
   </div>
