Added Index action and links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
         <div class="well">
           <h2 class="text-center">Community</h2>
           <p>Visit the community to meet other developers, entrepreneurs and investors!</p>
-          <%= link_to "Visit The Community", "#", class:'btn btn-default btn-block btn-lg' %>
+          <%= link_to "Visit The Community", users_path, class:'btn btn-default btn-block btn-lg' %>
         </div>
       </div>
     
