--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,33 @@
 List all of our users
+
+<% User.all.each do |user| %>
+<div class = "container">
+      
+  <div class = "row">
+        <div class = "col-md-3">
+            <% if user.profile.avatar %>
+              <%= image_tag user.profile.avatar.url(:thumb) %> <br/>
+            <% end %>
+        </div>
+        <div class = "col-md-6">
+          <h1><%= user.profile.first_name %><%= user.profile.last_name %></h1>
+            <!--<% if user.profile.job_title == "Developer" %>-->
+            <!--  <i class='fa fa-usd'></i>-->
+            <!--<% end %>-->
+    
+          <h3><%= user.profile.job_title %></h3>
+          <div class = "well profile-block profile-description">
+            <h3>Description</h3>
+            <h4><%= user.profile.description %></h4>
+          </div>
+          <% if current_user.plan_id == 2 %>
+            <div class = "well profile-block profile-contact-info">
+              <h3>Premium Service:  Contact Information</h3>
+              <h5><%= user.profile.phone_number %> 
+              <h5><%= user.profile.contact_email %></h5>
+            </div>
+          <% end %>
+        </div>
+  </div>
+</div>
+<% end %>
