--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <div class = "container">
-  <div class = "row">
-    <div class = "col-md-offset-2 col-md-10">
-      <%= current_user.email %> <br/>
-    </div>
-  </div>
+  <!--<div class = "row">-->
+  <!--  <div class = "col-md-offset-2 col-md-10">-->
+  <!--    <%= current_user.email %> <br/>-->
+  <!--  </div>-->
+  <!--</div>-->
       
   <div class = "row">
     <div class = "col-md-3">
