L173.  Working copy of code

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
 <h2>About Us</h2>
+<p>
+    Welcome to DevMatch.  We are a community of investors, entrepreneurs and developers interesed in meeting,
+    and helping one another.
+</p>
