--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -5,5 +5,12 @@
         <div class="well">
             <%= render 'form' %>
         </div>
+        
+        <h3>Cancel my account</h3>
+        <h5>
+            <font color="red" >Unhappy?</font>
+        </h5>
+        <%= button_to "Cancel my account", cancel_user_registration_path, class: "btn btn-danger", data: { confirm: "Are you sure?" }, method: :delete %>
+        <%= link_to "Back", :back %>
     </div>
 </div>
