--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,14 @@
 <div class = "container">
-  <!--<div class = "row">-->
-  <!--  <div class = "col-md-offset-2 col-md-10">-->
-  <!--    <%= current_user.email %> <br/>-->
-  <!--  </div>-->
-  <!--</div>-->
-      
   <div class = "row">
     <div class = "col-md-3">
-      <%= image_tag @user.profile.avatar.url(:thumb) %> <br/>
+      <% if @user.profile.avatar %>
+        <%= image_tag @user.profile.avatar.url(:thumb) %> <br/>
+      <% end %>
     </div>
+    
     <div class = "col-md-6">
-      <h1><%= @user.profile.first_name %><%= @user.profile.last_name %></h1>
-      <h3><span class="job-title-icon"><%= job_title_icon %></span><%= @user.profile.job_title %></h3>
+      <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
+      <h3><span class="job-title-icon"> <%= job_title_icon %></span><%= @user.profile.job_title %></h3>
       <div class = "well profile-block profile-description">
         <h3>Description</h3>
         <h4><%= @user.profile.description %></h4>
