--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
           <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
       
-        <div class="field">
+        <div class="field form-group">
           <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
           <%= f.password_field :password, autocomplete: "off", class:"form-control" %>
         </div>
@@ -25,7 +25,7 @@
           <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %>
         </div>
       
-        <div class="field">
+        <div class="field form-group">
           <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
           <%= f.password_field :current_password, autocomplete: "off", class:"form-control" %>
         </div>
@@ -35,15 +35,10 @@
           <%= f.submit "Update", class: "btn btn-primary" %>
         </div>
       <% end %>
-      
-      <h3>Cancel my account</h3>
-      
-      <h5>
-        <font color="red" >Unhappy?</font>
-        </h5>
-        <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure?" }, method: :delete %>
-      
-      <%= link_to "Back", :back %>
+      <br/>
+        <h4> <font color="red" >Unhappy?  Cancel your account:</font> </h5> 
+        <%= button_to "Cancel my account", cancel_user_registration_path, class: "btn btn-danger", data: { confirm: "Are you sure?" }, method: :delete %>
+        <%= link_to "Back", :back %>
     </div>
   </div>
 </div>
