--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
           <div class="col-md-2 text-center">
             <% if user.profile.avatar %>
               <%= link_to user do %>
-              <%= image_tag user.profile.avatar.url(:thumb), class: 'user-index-avatar' %>
+              <%= image_tag user.profile.avatar.url(:thumb), class: "user-index-avatar" %>
             <% end %>
         </div>
           
