--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,20 @@
   <div class = "row">
     <div class = "col-md-3">
       <% if @user.profile.avatar %>
-        <%= image_tag @user.profile.avatar.url(:thumb) %> <br/>
+        <%= 
+        image_tag @user.profile.avatar.url(:thumb), class: "user-show-avatar" 
+        %> <br/>
       <% end %>
     </div>
     
-    <div class = "col-md-6">
+    <div class = " user-show-name col-md-6">
       <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
-      <h3><span class="job-title-icon"> <%= job_title_icon %></span><%= @user.profile.job_title %></h3>
+      <h3>
+        <span class="job-title-icon"> 
+        <%= job_title_icon %>
+        </span>
+        <%= @user.profile.job_title %>
+      </h3>
       <div class = "well profile-block profile-description">
         <h3>Description</h3>
         <h4><%= @user.profile.description %></h4>
@@ -16,8 +23,8 @@
       <% if current_user.plan_id == 2 %>
         <div class = "well profile-block profile-contact-info">
           <h3>Premium Service:  Contact Information</h3>
-          <h5><%= @user.profile.phone_number %> 
-          <h5><%= @user.profile.contact_email %></h5>
+          <h5>Phone: <%= @user.profile.phone_number %> 
+          <h5>Email: <%= @user.profile.contact_email %></h5>
         </div>
       <% end %>
     </div>
