--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,23 +1,33 @@
-<div class="row">
-  <div class="col-md-4 col-md-offset-4">
-    <div class="well">
-      <%= form_for @contact do |f| %>
-        <div class="form-group">
-          <%= f.label :name %>
-          <%= f.text_field :name, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :email %>
-          <%= f.email_field :email, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :comments %>
-          <%= f.text_area :comments, class: 'form-control' %>
-        </div>
-        <%= f.submit 'Submit', class: 'btn btn-default' %>
-      <% end %>
+<div class = "container">
+  <div class = "row">
+    <div class="col-md-4 col-md-offset-4 text-left">
+      <font color = #337ab7>
+        <h3>Have a question or comment?</h3>
+        <h4>Share what is on your mind below <br/>... Thanks!</h4>
+      </font>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <div class="well form-group">
+        <%= form_for @contact do |f| %>
+          <div class="form-group">
+            <%= f.label :name %>
+            <%= f.text_field :name, class: 'form-control' %>
+          </div>
+  
+          <div class="form-group">
+            <%= f.label :email %>
+            <%= f.email_field :email, class: 'form-control' %>
+          </div>
+  
+          <div class="form-group">
+            <%= f.label :comment %>
+            <%= f.text_area :comments, class: 'form-control' %>
+          </div>
+          <%= f.submit 'Submit', class: 'btn btn-primary' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
