--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,7 +1,8 @@
 <div class = "row">
     <div class = "col-md-6 col-md-offset-3">
-        <h1 class = "text-center">Edit your profile</h1>
-        <p class ="text-center">Be a part of the Dev Match Community.  Fill out your profile today!</p>
+        <font color = #337ab7>
+          <h2 class = "text-center">Need to change something? <br/>Edit your profile below.</h1>
+        </font>
         <div class="well">
             <%= render 'form' %>
         </div>
