--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -2,7 +2,7 @@
     <div class = "col-md-6 col-md-offset-3">
         <h1 class = "text-center">Create your profile</h1>
         <p class ="text-center">Be a part of the Dev Match Community.  Fill out your profile today!</p>
-        <div class="well">
+        <div class="well form-group">
             <%= render 'form' %>
         </div>
     </div>
